--- a/Makefiles/VC14/IshikoFileTypes.vcxproj
+++ b/Makefiles/VC14/IshikoFileTypes.vcxproj
@@ -151,6 +151,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Include\Ishiko\FileTypes.h" />
+    <ClInclude Include="..\..\Include\Ishiko\FileTypes\ExtensionRegistryInfo.h" />
+    <ClInclude Include="..\..\Include\Ishiko\FileTypes\FileTypeAssociations.h" />
+    <ClInclude Include="..\..\Include\Ishiko\FileTypes\ProgIDRegistryInfo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
