--- a/Makefiles/VC12/IshikoFileTypes.vcxproj.filters
+++ b/Makefiles/VC12/IshikoFileTypes.vcxproj.filters
@@ -20,6 +20,9 @@
     <ClInclude Include="..\..\Include\Ishiko\FileTypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Include\Ishiko\FileTypes\linkoptions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Include\Ishiko\FileTypes\ExtensionRegistryInfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
